add blocks picture

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</div></section>
 	<section class="slide"><div>
 		<h2>Блоки</h2>
-		<p>Here will be couple of blocks.</p>
+		<img src="images/ymaps-app-blocks.png" alt="ymaps-app"/>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Polymer-element (блок)</h2>
@@ -111,7 +111,7 @@
 		</pre>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Элемент имеет содержимое</h2>
+		<h2>Элемент внутри</h2>
 		<pre>
 			<code>&lt;template&gt;</code>
 			<code>  &lt;!-- здесь верстка --&gt;</code>
@@ -154,7 +154,7 @@
 		<p><code>npm install web-component-tester</code></p>
 		<ul>
 			<li>Встроенные mocha+chai</li>
-			<li>Тесты пишутся как html (можно и на js)</li>
+			<li>Тесты пишутся на html (можно и на js)</li>
 			<li>Без PhantomJS, он не поддерживает новые технологии</li>
 			<li>Зато с SauceLabs или другим Selenium Grid</li>
 		</ul>
